--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thelegendmaster64/ProjectSlavkoStevic.git"
+    "url": "git+https://github.com/SteeleRussell/Phase1-SlSt"
   },
   "author": "Slavko",
   "license": "ISC",
